force-app/main/default/objects/Package__c/Package__c.object-meta.xml
<CustomObject>
    <label>Package</label>
    <nameField>
        <displayFormat>PKG-{00000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>