force-app/main/default/objects/Package__c/fields/Packed_At__c.field-meta.xml
<CustomField>
    <fullName>Packed_At__c</fullName>
    <label>Packed At</label>
    <type>DateTime</type>
</CustomField>