force-app/main/default/objects/Package__c/fields/Packed_By__c.field-meta.xml
<CustomField>
    <fullName>Packed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Warehouse Packages</relationshipLabel>
    <relationshipName>Warehouse_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>