force-app/main/default/objects/Package__c/validationRules/Weight_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Weight__c &lt; 0</errorConditionFormula>
    <errorMessage>Package weight cannot be negative.</errorMessage>
</ValidationRule>